adds the first draft of lesson 2 (needs review)

--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -48,6 +48,7 @@ $color-testimonial: #fc8dc1 !default;
 .python, .language-python { @include cdSetup($color-source); }
 .cpp, .language-cpp       { @include cdSetup($color-source); }
 .c, .language-c           { @include cdSetup($color-source); }
+.cuda, .language-cuda { @include cdSetup($color-source); }
 .r, .language-r           { @include cdSetup($color-source); }
 .sql, .language-sql       { @include cdSetup($color-source); }
 
@@ -61,6 +62,7 @@ $color-testimonial: #fc8dc1 !default;
 .python::before, .language-python::before,
 .cpp::before, .language-cpp::before,
 .c::before, .language-c::before,
+.cuda::before, .language-cuda::before,
 .r::before, .language-r::before,
 .sql::before, .language-sql::before {
     background-color: #f2eff6;
@@ -79,6 +81,7 @@ $color-testimonial: #fc8dc1 !default;
 .python::before, .language-python::before { content: "Python"; }
 .cpp::before, .language-cpp::before { content: "C++"; }
 .c::before, .language-c::before { content: "C"; }
+.cuda::before, .language-cuda::before { content: "CUDA C"; }
 .r::before, .language-r::before { content: "R"; }
 .sql::before, .language-sql::before { content: "SQL"; }
 
